--- a/git/formuladb-env/frmdb-apps/base-app/content-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/content-page.html
@@ -45,7 +45,7 @@
             <small class="text-muted">with muted text</small>
         </h3>
         <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-        <p class="">Normal paragraph text after headings...</p>
+        <p>Normal paragraph text after headings...</p>
     </section>
     <section class="container">
         <h1 id="display-headings" class="pt-5 mb-3">Display Headings</h1>
