--- a/git/formuladb-env/frmdb-apps/design-therapy/index.html
+++ b/git/formuladb-env/frmdb-apps/design-therapy/index.html
@@ -4,11 +4,11 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="GrandFrames" class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
+    <frmdb-t-main-nav class="fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover frmdb-transform-preserve-3d">
-        <div class="frmdb-t-main min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/design-therapy/static/55e1d144425bae14f6da8c7dda79367f1c37dfe752506c4870277bdd974fc45db8_1280.jpg&quot;);">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover class="frmdb-transform-preserve-3d">
+        <frmdb-t-main class="min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/design-therapy/static/55e1d144425bae14f6da8c7dda79367f1c37dfe752506c4870277bdd974fc45db8_1280.jpg&quot;);">
             <div class="jumbotron animated slideInUp col-12 col-lg-8 min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">design therapy</h1>
@@ -17,9 +17,9 @@
                 </p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
-        </div>
-        <div class="frmdb-t-aside container p-0 frmdb-section-dark mt-n5"></div>
-    </header>
+        </frmdb-t-main>
+        <frmdb-t-aside class="container p-0 frmdb-section-dark mt-n5"></frmdb-t-aside>
+    </frmdb-t-cover>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
@@ -102,7 +102,7 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3 frmdb-card-h-50">
-                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <frmdb-t-card-icon-main class="border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-id-card-alt-contact-demographics-document-identification-issued-profile" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> short survey
                     </h4>
@@ -110,14 +110,14 @@
                         </p>
                     <div>It will be fun, we promise!</div>
                     <p></p>
-                </div>
-                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en">&nbsp;designer match</h4>
                     <p data-i18n="en">This is the second step where you will meet the perfect designer for you. He will present mood boards concept.</p>
                     <p></p>
-                </div>
-                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-couch-chair-cushion-furniture-relax-sofa" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> shop &amp; order
                     </h4>
@@ -125,12 +125,12 @@
                     <div>The third step is for the shop list.</div>
                     <div data-i18n="en">This time you will have the final design and instructions for your project. So now it's time for shopping. The designer will show you a list of furniture, decorations, accessories from different shops. You choose, he orders for you</div>
                     <p></p>
-                </div>
-                <div class="frmdb-t-card-icon-main center border border-2 border-primary p-3 frmdb-bg-dark-70">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="center border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-home-abode-building-house-main" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> enjoy your rooms</h4>
                     <p data-i18n="en">This is the last step where you will enjoy your rooms you've always wanted.</p>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
     </section>
