--- a/git/formuladb-env/frmdb-apps/formuladb-io/about.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/about.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb-io" class="">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb-io">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 50vh">
@@ -181,7 +181,7 @@
                         <div class="col-lg-3 text-center" id="">
                             <div class="text-center">
                                 <img src="assets/images/team/Alex.jpeg" class="rounded-circle mx-auto" id="" width="200" height="200">
-                                <h5 class="">Alex Cristu - CEO</h5>
+                                <h5>Alex Cristu - CEO</h5>
                                 <a href="https://www.linkedin.com/in/alexandru-cristu/" style="font-size: 150%">
                                     <i class="frmdb-i-linkedin"></i>
                                 </a>
@@ -191,7 +191,7 @@
                         <div class="col-lg-3 text-center" id="">
                             <div class="text-center">
                                 <img src="assets/images/team/Sorin.jpeg" class="rounded-circle mx-auto" id="" width="200" height="200" alt="">
-                                <h5 class="">Sorin Cirstoiu - COO</h5>
+                                <h5>Sorin Cirstoiu - COO</h5>
                                 <a href="https://www.linkedin.com/in/sorincirstoiu" style="font-size: 150%">
                                     <i class="frmdb-i-linkedin"></i>
                                 </a>
@@ -201,7 +201,7 @@
                         <div class="col-lg-3 text-center" id="">
                             <div class="text-center">
                                 <img src="assets/images/team/Vali.jpeg" class="rounded-circle mx-auto" id="" width="200" height="200">
-                                <h5 class="">Valentin Raduti - CTO</h5>
+                                <h5>Valentin Raduti - CTO</h5>
                                 <a href="https://www.linkedin.com/in/gabriel-valentin-r%C4%83du%C8%9Bi-37ba731/" style="font-size: 150%">
                                     <i class="frmdb-i-linkedin"></i>
                                 </a>
@@ -211,7 +211,7 @@
                         <div class="col-lg-3 text-center" id="">
                             <div class="text-center">
                                 <img src="assets/images/team/Laur.jpeg" class="rounded-circle mx-auto" id="" width="200" height="200">
-                                <h5 class="">Laurentiu Soica - CIO</h5>
+                                <h5>Laurentiu Soica - CIO</h5>
                                 <a href="https://www.linkedin.com/in/laurentiusoica/" style="font-size: 150%">
                                     <i class="frmdb-i-linkedin"></i>
                                 </a>
@@ -223,7 +223,7 @@
                         <div class="col-lg-3 text-center" id="">
                             <div class="text-center">
                                 <img src="assets/images/team/Laura.jpeg" class="rounded-circle mx-auto" id="" width="200px" height="200px">
-                                <h5 class="">Laura Cristu - Business Analyst</h5>
+                                <h5>Laura Cristu - Business Analyst</h5>
                                 <a href="https://www.linkedin.com/in/laura-cristu-6843a5114/" style="font-size: 150%">
                                     <i class="frmdb-i-linkedin"></i>
                                 </a>
@@ -233,7 +233,7 @@
                         <div class="col-lg-3 text-center" id="">
                             <div class="text-center">
                                 <img src="assets/images/team/Miruna.jpeg" class="rounded-circle mx-auto" id="" width="200px" height="200px" alt="">
-                                <h5 class="">Miruna Pria - Web Designer</h5>
+                                <h5>Miruna Pria - Web Designer</h5>
                                 <a href="https://www.linkedin.com/in/pria-miruna-a7aa0775/" style="font-size: 150%">
                                     <i class="frmdb-i-linkedin"></i>
                                 </a>
