--- a/git/formuladb-env/frmdb-apps/formuladb-io/all-in-one-digital-transformation-platform.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/all-in-one-digital-transformation-platform.html
@@ -4,7 +4,7 @@
     <title>FormulaDB - All in one digital transformation platform</title>
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb-io" class="">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb-io">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 50vh">
