--- a/git/formuladb-env/frmdb-apps/formuladb-io/pricing.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/pricing.html
@@ -120,7 +120,7 @@
                     <div class="card-deck mb-3 text-center">
                         <div class="card mb-4 box-shadow">
                             <div class="card-header">
-                                <h4 class="">Free</h4>
+                                <h4>Free</h4>
                             </div>
                             <div class="card-body">
                                 <h1 class="card-title mb-0">$0</h1>
