--- a/git/formuladb-env/frmdb-apps/formuladb-university/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-university/landing-page.html
@@ -38,7 +38,7 @@
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
@@ -56,7 +56,7 @@
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
@@ -74,7 +74,7 @@
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
@@ -92,7 +92,7 @@
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
