--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -77,7 +77,7 @@
                 <div class="card-deck frmdb-cards-3">
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~07-Ball">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/interior-2685521_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/interior-2685521_1920.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Ball Room</h5>
@@ -85,7 +85,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -95,7 +95,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~06-Conference">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/living-room-581073_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/living-room-581073_1920.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Conference Room</h5>
@@ -103,7 +103,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -113,7 +113,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~05-EconomySigle">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/bedroom-1872196_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/bedroom-1872196_1920.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Economy Sigle</h5>
@@ -121,7 +121,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -131,7 +131,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~04-EconomyDouble">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room4.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/room4.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Economy Double</h5>
@@ -139,7 +139,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -149,7 +149,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~03-Honeymoon">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room3.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/room3.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Honeymoon Suit</h5>
@@ -157,7 +157,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -167,7 +167,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~02-SigleDeluxe">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room2.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/room2.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Single Deluxe Room</h5>
@@ -175,7 +175,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -185,7 +185,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~01-DoubleDeluxe">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room1.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/room1.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Double Deluxe Room</h5>
@@ -193,7 +193,7 @@
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -203,7 +203,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="" class="">
+                            <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <h5>Card 2 title</h5>
@@ -211,7 +211,7 @@
                             <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -221,7 +221,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="" class="">
+                            <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <h5>Card 3 title</h5>
@@ -229,7 +229,7 @@
                             <p>Curabitur suscipit, massa eu maximus fringilla</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
@@ -239,7 +239,7 @@
                     </div>
                     <div class="frmdb-t-card-media-main">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="" class="">
+                            <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <h5>Card 4 title</h5>
@@ -247,7 +247,7 @@
                             <p>Etiam porta magna eu rutrum rhoncus</p>
                         </div>
                         <div class="frmdb-t-card-action">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)">Action</a>
                         </div>
                         <div class="frmdb-t-card-note">
                             <span>INFO 
