--- a/git/formuladb-env/frmdb-apps/law-firm/index.html
+++ b/git/formuladb-env/frmdb-apps/law-firm/index.html
@@ -4,21 +4,21 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="Comfort" class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav container bg-white fixed-top shadow">
+    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/law-firm/static/55e5d2444857a414f6da8c7dda79367f1c37dfe752506c4870277ad49045cd51bf_1280.jpg&quot;);">
-        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-end">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/law-firm/static/55e5d2444857a414f6da8c7dda79367f1c37dfe752506c4870277ad49045cd51bf_1280.jpg&quot;);">
+        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-end">
             <div class="jumbotron animated slideInUp w-100 text-center bg-transparent" data-aos="slideInUp">
                 <h1 class="display-4" data-i18n="en">best attorneys at law</h1>
                 <p data-i18n="en">'Nulum crimen, nulla poena sine lege scripta'</p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto" data-i18n="en">get quote</a>
             </div>
-        </div>
-        <div class="frmdb-t-aside container frmdb-section-dark">
+        </frmdb-t-main>
+        <frmdb-t-aside class="container frmdb-section-dark">
             <div data-frmdb-fragment="_form.html"></div>
-        </div>
-    </header>
+        </frmdb-t-aside>
+    </frmdb-t-cover>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
@@ -42,45 +42,45 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gavel-hammer-judge-law-lawyer-opinion"></frmdb-icon>&nbsp;criminal law
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-university-bank-building-college-higher_education_-_students-institution"></frmdb-icon>&nbsp;legal counseling
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-registered-copyright-mark-trademark"></frmdb-icon>&nbsp;data protection
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-search-dollar-bigger-enlarge-find-magnify-money-preview-zoom"></frmdb-icon> Tax advisory
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-balance-scale-left-justice-legal-measure-unbalanced-weight"></frmdb-icon>&nbsp;litigation
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-brain-cerebellum-gray_matter-intellect-medulla_oblongata-mind-noodle-wit"></frmdb-icon>&nbsp;intelectual&nbsp; &nbsp; &nbsp; property
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
     </section>
