--- a/git/formuladb-env/frmdb-apps/photography-services/index.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/index.html
@@ -4,9 +4,8 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
-        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-center 
-">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
+        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
             <div class="text-center
 ">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -17,32 +16,32 @@
                     <br>it would be good to keep it under two lines of text
                 </p>
             </div>
-        </div>
-        <div class="frmdb-t-aside container frmdb-section-dark"></div>
-    </header>
+        </frmdb-t-main>
+        <frmdb-t-aside class="container frmdb-section-dark"></frmdb-t-aside>
+    </frmdb-t-cover>
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 data-i18n="en" contenteditable="true" spellcheckker="false">Portfolio</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/50e9d542485ab108f5d08460962936771d3edce4524c704c7d2f7ad19249c55e_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">&nbsp;Food photography</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></div>
+                <frmdb-t-card-action class="mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></frmdb-t-card-action>
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more</a>
-                <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="position: relative; left: 0px; display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+                <frmdb-t-card-note class="text-center text-info font-weight-bold"></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="position: relative; left: 0px; display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/54e3d3454e51a414f6da8c7dda79367f1c37dfe752506c4870277bd59248c059b9_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">editorial
                         <div data-i18n="en"></div>
@@ -50,41 +49,41 @@
                     <h6>Card 2 subtitle</h6>
                     <p data-i18n="en">Integer sit amet nisi viverra, pharetra</p>
                 </div>
-                <div class="frmdb-t-card-action mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></div>
+                <frmdb-t-card-action class="mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></frmdb-t-card-action>
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more
                     <br>
                 </a>
-                <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+                <frmdb-t-card-note class="text-center text-info font-weight-bold"></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/50e7d2434b4fad0bffd8992cc6293e76143ddfe44e507441752e7ed1914acc_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">Sports photography</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <div class="frmdb-t-card-action mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></div>
+                <frmdb-t-card-action class="mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></frmdb-t-card-action>
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more
                     <br>
                 </a>
-                <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+                <frmdb-t-card-note class="text-center text-info font-weight-bold"></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/51e2d0474950b108f5d08460962936771d3edce4524c704c7d2f7ad1924bc759_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">Events photography</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></div>
+                <frmdb-t-card-action class="mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></frmdb-t-card-action>
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more
                     <br>
                 </a>
-            </div>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax " style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/57e8d0434e54a514f6da8c7dda79367f1c37dfe752506c4870277bd5924ecc5bb1_1280.jpg&quot;); opacity: 1;">
