--- a/git/formuladb-env/frmdb-apps/beauty-salon/index.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/index.html
@@ -4,11 +4,11 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="GrandFrames" class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
+    <frmdb-t-main-nav class="fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover frmdb-transform-preserve-3d">
-        <div class="frmdb-t-main min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/52e0d1404a5baa14f6da8c7dda79367f1c37dfe752506c4870277bd5944ac05bbb_1280.jpg&quot;);">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover class="frmdb-transform-preserve-3d">
+        <frmdb-t-main class="min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/52e0d1404a5baa14f6da8c7dda79367f1c37dfe752506c4870277bd5944ac05bbb_1280.jpg&quot;);">
             <div class="jumbotron col-12 col-lg-8 min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">Magic Beauty Salon</h1>
@@ -19,84 +19,84 @@
                     <span style="font-weight: 400;" data-i18n="en">Connect with us</span>
                     <br>
                 </a>
-                <div class="frmdb-t-main-nav fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
+                <frmdb-t-main-nav class="fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
                     <div data-frmdb-fragment="_nav.html"></div>
-                </div>
+                </frmdb-t-main-nav>
             </div>
-        </div>
-        <div class="frmdb-t-aside container p-0 frmdb-section-dark mt-n5">
+        </frmdb-t-main>
+        <frmdb-t-aside class="container p-0 frmdb-section-dark mt-n5">
             <div data-frmdb-fragment="_form.html"></div>
-        </div>
-    </header>
+        </frmdb-t-aside>
+    </frmdb-t-cover>
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 data-i18n="en">Our services</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck frmdb-card-h-50">
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e4d5464b51ad14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc158ba_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center">
+                <frmdb-t-card-action class="mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now</a>
-                </div>
-                <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note class="text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
                     <span>Hair
                         <small></small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e1d3424355a814f6da8c7dda79367f1c37dfe752506c4870277bd09e49c65ab0_1280.jpg" alt="" style="object-position: center">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p data-i18n="en">Integer sit amet nisi</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center">
+                <frmdb-t-card-action class="mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now
 </a>
-                </div>
-                <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note class="text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
                     <span>Nails</span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e3d24b4d53b108f5d08460962936771d3edce4524c704c7d2f7fdd964cc65d_640.jpg" alt="" style="width: 100%" class="w-100">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p data-i18n="en">Curabitur suscipit, massa&nbsp;</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center">
+                <frmdb-t-card-action class="mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now</a>
-                </div>
-                <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note class="text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
                     <span>Make-up
                         <small></small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e7dc404e53af14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc25ebf_640.jpg" alt="" class="w-100">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center">
+                <frmdb-t-card-action class="mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now</a>
-                </div>
-                <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note class="text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
                     <span>Skincare &amp; Spa
                         <small></small>
                     </span>
-                </div>
-            </div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/54e6d245495bae14f6da8c7dda79367f1c37dfe752506c4870277bd5944ac05bbb_1280.jpg&quot;);">
@@ -131,23 +131,23 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3 frmdb-card-h-50">
-                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <frmdb-t-card-icon-main class="border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-mobile-alt-apple-call-cell_phone-cellphone-device-iphone-number-screen-telephone" class="text-primary m-2"></frmdb-icon>&nbsp;Call us 07XX XXX XXX
                     </h4>
                     <p data-i18n="en"></p>
-                </div>
-                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en" contenteditable="true" spellcheckker="false">
                         <frmdb-icon name="fontawesome-solid-map-marker-alt-address-coordinates-destination-gps-localize-location-map-navigation-paper-pin-place-point_of_interest-position-route-travel" class="text-primary m-2"></frmdb-icon>&nbsp; &nbsp; Visit us
                     </h4>
                     <p data-i18n="en">Maecenas tempor erat eget ornare vulputate.&nbsp;</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-clock-date-late-schedule-time-timer-timestamp-watch" class="text-primary m-2"></frmdb-icon>&nbsp;We're here 9AM - 9PM
                     </h4>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
     </section>
