--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-1.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-1.html
@@ -33,7 +33,7 @@
         <div class="card-deck">
             <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="" class="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
@@ -41,7 +41,7 @@
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
@@ -51,7 +51,7 @@
             </div>
             <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="" class="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 2 title</h5>
@@ -59,7 +59,7 @@
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
@@ -69,7 +69,7 @@
             </div>
             <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="" class="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 3 title</h5>
@@ -77,7 +77,7 @@
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
@@ -87,7 +87,7 @@
             </div>
             <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="" class="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
@@ -95,7 +95,7 @@
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="javascript:void(0)">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
                     <span>INFO 
