--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
@@ -7,19 +7,19 @@
     <meta name="frmdb_display_date" content="">
 </head>
 <body class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav">
+    <frmdb-t-main-nav>
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover min-vh-50" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
-        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover class="min-vh-50" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+        <frmdb-t-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
             <div class="jumbotron">
                 <h1 class="display-4">Our Blog</h1>
                 <p>Lead paragraph providing a short introduction to you blog.&nbsp;
                     <br>
                 </p>
             </div>
-        </div>
-    </header>
+        </frmdb-t-main>
+    </frmdb-t-cover>
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 id="thememediacards">Blog Posts</h2>
@@ -42,57 +42,57 @@
             </div>
         </div>
         <div class="card-deck frmdb-cards-3">
-            <div class="frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
-                <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
+            <frmdb-t-card-media-main data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
+                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-1.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.$Page[].title">Post 1</h5>
                     <p data-frmdb-value="$FRMDB.$Page[].description">desc</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="./blog-post-1.html" class="position-relative" data-frmdb-value="" data-frmdb-attr="href:CONCATENATE('./', name, '.html'):$FRMDB.$Page[]">Read Post</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
-                <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
+                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-2.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.$Page[].title">Post 2</h5>
                     <p data-frmdb-value="$FRMDB.$Page[].description">desc</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="./blog-post-2.html" class="position-relative" data-frmdb-attr="href:CONCATENATE('./', name, '.html'):$FRMDB.$Page[]">Read Post</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
-                <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
+                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-3.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.$Page[].title">Blog Post 3</h5>
                     <p data-frmdb-value="$FRMDB.$Page[].description"></p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="./blog-post-3.html" class="position-relative" data-frmdb-attr="href:CONCATENATE('./', name, '.html'):$FRMDB.$Page[]">Read Post</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg-right.jpg')">
@@ -129,45 +129,45 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="frmdb-t-card-icon-main">
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
-                </div>
-                <div class="frmdb-t-card-icon-main">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main>
                     <h4>
                         <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
     </section>
