--- a/git/formuladb-env/frmdb-apps/click-hostel/index.html
+++ b/git/formuladb-env/frmdb-apps/click-hostel/index.html
@@ -4,11 +4,11 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="Comfort" class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav container bg-white fixed-top shadow">
+    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/click-hostel/static/52e3dd4b4b54ac14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc45fb0_1280.jpg&quot;);">
-        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/click-hostel/static/52e3dd4b4b54ac14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc45fb0_1280.jpg&quot;);">
+        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
             <div class="jumbotron w-100 text-center bg-transparent">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">click hostel</h1>
@@ -17,9 +17,9 @@
                 </p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto" data-i18n="en">reserve a room</a>
             </div>
-        </div>
-        <div class="frmdb-t-aside container frmdb-section-dark"></div>
-    </header>
+        </frmdb-t-main>
+        <frmdb-t-aside class="container frmdb-section-dark"></frmdb-t-aside>
+    </frmdb-t-cover>
     <div data-frmdb-fragment="_form.html"></div>
     <section class="container py-5">
         <div class="text-center mb-5">
@@ -29,10 +29,10 @@
             <p data-i18n="en">Find the perfect place for you in the city. Experience an amazing urban retreat.</p>
         </div>
         <div class="card-deck">
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/52e1d6444a54b108f5d08460962936771d3edce4524c704c7d2e7ad49644cc5e_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">6 beds private dorm</h5>
                     <h6 data-i18n="en">6 SINGLE BEDS</h6>
@@ -43,53 +43,53 @@
                     <div>Van Gogh Museum Tickets</div>
                     <p></p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">RESERVE</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/57e8d6474950ab14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">private room</h5>
                     <h6 data-i18n="en">a small office</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">RESERVE</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/57e0d6424a55a514f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">standard double room</h5>
                     <h6 data-i18n="en">1 LARGE DOUBLE BED</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">RESERVE</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e5d24b4e56aa14f6da8c7dda79367f1c37dfe752506c4870277ad5974fc450bf_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">fun at the bar</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">OPENING HOURS</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <section class="container py-5">
@@ -98,24 +98,24 @@
             <p data-i18n="en">Here you can find some recommendations.</p>
         </div>
         <div class="card-deck">
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/52e1d2464e5aaa14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec75bb1_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">tulip fields</h5>
                     <h6 data-i18n="en">Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">Reserve a private tour</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e1d7444c50a914f6da8c7dda79367f1c37dfe752506c4870277ad5974ec55cba_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">Top museums</h5>
                     <h6 data-i18n="en">buy your ticket online</h6>
@@ -127,39 +127,39 @@
                     </div>
                     <p></p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">Buy ticket</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e7dc4a4e5bad14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec459bf_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">rent a bike</h5>
                     <h6 data-i18n="en" contenteditable="true" spellcheckker="false">rent a bike</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">Rent a bike</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/50e9d5464c5bb108f5d08460962936771d3edce4524c704c7d2d7ad49f4ecd59_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">top bars &amp; restaurants</h5>
                     <h6 data-i18n="en">what we recommend</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" data-i18n="en">See addresses</a>
-                </div>
-                <div class="frmdb-t-card-note"></div>
-            </div>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note></frmdb-t-card-note>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/click-hostel/static/54e2d3424853ae14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc65fb8_1280.jpg&quot;);">
@@ -169,45 +169,45 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> breakfast
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon>&nbsp;rent bikes
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-mug-hot-caliente-cocoa-coffee-cup-drink-holiday-hot_chocolate-steam-tea-warmth"></frmdb-icon>&nbsp;bistro cafe
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-wifi-connection-hotspot-internet-network-wireless"></frmdb-icon> free wifi
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game"></frmdb-icon> gaming room
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-money-check-alt-bank_check-buy-checkout-cheque-money-payment-price-purchase"></frmdb-icon> budget option
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
     </section>
