--- a/git/formuladb-env/frmdb-apps/health-guardians/index.html
+++ b/git/formuladb-env/frmdb-apps/health-guardians/index.html
@@ -4,11 +4,11 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="Inclined" class="frmdb-editor-normal text-center">
-    <div class="frmdb-t-main-nav">
+    <frmdb-t-main-nav>
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
-        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+        <frmdb-t-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">health guardians</h1>
@@ -17,55 +17,55 @@
                 </p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto" data-i18n="en">discover the perfect doctor for you</a>
             </div>
-        </div>
-        <div class="frmdb-t-aside">
+        </frmdb-t-main>
+        <frmdb-t-aside>
             <div data-frmdb-fragment="_form.html"></div>
-        </div>
-    </header>
+        </frmdb-t-aside>
+    </frmdb-t-cover>
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 data-i18n="en">meet the specialists</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden">
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/52e6d2444e52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. lee peng</h5>
                     <h6 data-i18n="en">general practitioner</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" class="text-center" data-i18n="en" style="font-weight: 900;">BOOK A CONSULTATION</a>
                     <a href="javascript:void(0)" class="text-center" data-i18n="en" style="font-weight: 900;">
                         <br>For more informations
                         <br>CONTACT US
                         <br>
                     </a>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-action>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/57e1d14a4b56a514f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. john perk</h5>
                     <h6 data-i18n="en">CARDIOLOGY SPECIALIST</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" class="text-center" data-i18n="en" style="font-weight: 900;">BOOK A CONSULTATION</a>
-                </div>
+                </frmdb-t-card-action>
                 <a href="javascript:void(0)" class="text-center" data-i18n="en" style="font-weight: 900;">For more informations,
                     <div>CONTACT US&nbsp;</div>
                 </a>
-            </div>
-            <div class="frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden">
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/54e1d1424857a514f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. Jose lopez</h5>
                     <h6 data-i18n="en">HEMATOLOGIST</h6>
@@ -75,24 +75,24 @@
                 <a href="javascript:void(0)" data-i18n="en" style="font-weight: 900; line-height: 21px;" class="text-center">For more informations
                     <div>CONTACT US</div>
                 </a>
-                <div class="frmdb-t-card-action"></div>
-            </div>
-            <div class="frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden">
+                <frmdb-t-card-action></frmdb-t-card-action>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main>
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/55e0d5464c5bae14f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.png" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. meghan raw</h5>
                     <h6 data-i18n="en">Diabetologist/ nutritionist</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action">
+                <frmdb-t-card-action>
                     <a href="javascript:void(0)" class="text-center" data-i18n="en" style="font-weight: 900;">BOOK A CONSULTATION</a>
-                </div>
+                </frmdb-t-card-action>
                 <a href="javascript:void(0)" class=" TEXT-CENTER" data-i18n="en" style="font-weight: 900;">For more informations
                     <div>CONTACT US</div>
                 </a>
-            </div>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <a class="text-center btn btn-primary mx-auto " href="javascript:void(0)" data-i18n="en">list of medical specialists</a>
