--- a/git/formuladb-env/frmdb-apps/kids-playground/index.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/index.html
@@ -4,22 +4,22 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="Comfort" class="frmdb-editor-preview">
-    <div class="frmdb-t-main-nav container bg-white fixed-top shadow">
+    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50">
-        <div class="frmdb-t-main frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50 flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
+    </frmdb-t-main-nav>
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50">
+        <frmdb-t-main class="frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50 flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
             <div class="jumbotron animated slideInUp w-100 text-center bg-transparent" data-aos="slideInUp">
                 <h6 data-i18n="en">all ages wellcome</h6>
                 <h1 class="display-4" data-i18n="en">fun playground</h1>
                 <p data-i18n="en">We have the right kind of fun you need</p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto" data-i18n="en">let's play</a>
             </div>
-        </div>
-    </header>
-    <div class="frmdb-t-aside container ">
+        </frmdb-t-main>
+    </frmdb-t-cover>
+    <frmdb-t-aside class="container">
         <div data-frmdb-fragment="_form.html"></div>
-    </div>
+    </frmdb-t-aside>
     <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/5ee1d7474250b108f5d08460962936771d3edce4524c704c7d2e7ad4974ec15e_1280.jpg&quot;);">
         <div class="container">
             <div class="row">
@@ -38,78 +38,78 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden">
+            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">cozy playground</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">cool games</h5>
                     <h6>Card 2 subtitle</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg" alt="">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">laser tag</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
-            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden">
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
+            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+                <frmdb-t-img class="overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg" alt="" width="250">
-                </div>
+                </frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">escalade</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)" class="">Action</a>
-                </div>
-                <div class="frmdb-t-card-note">
+                <frmdb-t-card-action>
+                    <a href="javascript:void(0)">Action</a>
+                </frmdb-t-card-action>
+                <frmdb-t-card-note>
                     <span>INFO 
                         <small>info</small>
                     </span>
-                </div>
-            </div>
+                </frmdb-t-card-note>
+            </frmdb-t-card-media-main>
         </div>
     </section>
     <section class="container py-5 my-5">
@@ -152,45 +152,45 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-expand-arrow-bigger-enlarge-resize"></frmdb-icon>&nbsp;600 square meters
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership"></frmdb-icon>&nbsp;exclusiveness
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-user-clock-alert-person-remind-time"></frmdb-icon>&nbsp;unlimited laser tag
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-hamburger-bacon-beef-burger-burger_king-cheeseburger-fast_food-grill-ground_beef-mcdonalds-sandwich"></frmdb-icon>&nbsp;kids menu
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game"></frmdb-icon>&nbsp;board games
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
-                </div>
-                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                </frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-parking-auto-car-garage-meter"></frmdb-icon>&nbsp;parking
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
-                </div>
+                </frmdb-t-card-icon-main>
             </div>
         </div>
     </section>
